# pico2-synth

./: Cargo.toml  TODO.md
src/: arrayinit_nostd.rs  keyboard.rs  main.rs
