[package]
name = "pico2-quick"
version = "0.2.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
] }
panic-probe = { version = "1.0", features = ["print-defmt"] }
embassy-time = { version = "0.5.0" }
embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0"
static_cell = "2.1.1"
libm = "0.2.16"
fundsp = { version = "0.23.0", default-features = false }
linked_list_allocator = "0.10.5"
